# fyf-photo-culler

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
backend/: persistence.py  server.py  state.py  thumbnail.py
backend/routes/: analysis.py  export.py  photos.py  review.py  session.py
culling/: duplicates.py  organizer.py  technical.py  utils.py  xmp.py
docs/: RELEASE_SIGNING.md
docs/superpowers/specs/: 2026-07-12-review-ux-performance-design.md
review/: 00-genel-bakis.md  01-mimari.md  02-analiz-motoru.md  03-backend.md  04-frontend-ux.md  05-build-release.md  06-iyi-niyet-yanlis-tasarim.md  07-ozellik-yol-haritasi.md
scripts/: compare_scoring.py
tests/: conftest.py  test_analysis.py  test_duplicates.py  test_export_api.py  test_photos_api.py  test_review_api.py  test_technical.py  test_utils.py  test_xmp.py
ui/: package.json
ui/src/: App.css  App.tsx  main.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs
ui/src/components/: Compare.tsx  Export.tsx  GroupPanel.tsx  Landing.tsx  Loupe.tsx  Onboarding.tsx  Processing.tsx  Review.tsx  Titlebar.tsx
ui/src/lib/: api.ts  i18n.ts  stores.ts  triage.ts
