[project]
name = "fyf-photo-culler"
version = "0.2.0"
description = "FYF Photo Culler — Automatically cull FRC competition photos"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "opencv-python-headless",
    "Pillow",
    "imagehash",
    "scikit-image",
    "tqdm",
    "numpy",
    "fastapi",
    "uvicorn[standard]",
]
